--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,13 @@ cache:
     - node_modules
 script:
   - npm test
+  - npm run test:coverage
   - npm run build
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: https://github.com/KonstantinVVictoria/G_State.git
+  local_dir: build
+  on:
+    branch: master
